Movie Image added

--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -1,9 +1,3 @@
-﻿@model  VanillaMovieShop.Models.ViewModels.MoviesVM
+﻿@model VanillaMovieShop.Models.ViewModels.MoviesVM
 
-@{
-    ViewData["Title"] = "Index";
-}
-
-<h1>Index</h1>
-
-<partial name="_MoviePartial" model="Model.Movies" />
+<partial name="_MoviePartial" model="Model.Movies">
