--- a/Views/Movies/Create.cshtml
+++ b/Views/Movies/Create.cshtml
@@ -43,6 +43,11 @@
                 <input asp-for="Actors" class="form-control" />
                 <span asp-validation-for="Actors" class="text-danger"></span>
             </div>
+            <div class="form-group mb-3">
+                <label asp-for="Image" for="formFile" class="form-label">Image</label>
+                <input asp-for="Image" class="form-control" type="file" id="formFile">
+            </div>
+
             <div class="form-group">
                 <br />
                 <input type="submit" value="Save" class="btn btn-primary" />
