//Added views to index, delete, create, edit customer

--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -1,9 +1,10 @@
-﻿@model VanillaMovieShop.Models.ViewModels.MoviesVM
+﻿@model VanillaMovieShop.Models.ViewModels.CustomerVM
 
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>CustomerIndex</h1>
+
 
 <partial name="_CustomerPartial" model="Model.Customers"/>
