--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,9 +27,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Create">Create Movie</a>
-                        </li>
+                        </li>                      
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Create">Create Customer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">CustomerController</a>
                         </li>
                     </ul>
                 </div>
