--- a/Views/Shared/_MoviePartial.cshtml
+++ b/Views/Shared/_MoviePartial.cshtml
@@ -3,67 +3,37 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Director)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReleaseYear)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Genre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Actors)
-            </th>
-            <th >
-                @Html.DisplayNameFor(model => model.Image)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-
-            <td>
-                    <img src="/Images/@item.Image" width="100" height="180">
-                    @* @Html.DisplayFor(modelItem => item.Image)  *@
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Director)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseYear)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Actors)
-            </td>
 
 
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="container-fluid  ">
+    <div class="row gy-4">
+    @* card-deck *@
+    @foreach (var item in Model)
+    {
+       
+            <div class="col-md-3 ">
+                    <div class="card h-100 gap-2">
+                        <img class="card-img-top" src="/Images/@item.Image" width="150" height="300" alt="Image">
+                            @* @Html.DisplayFor(modelItem => item.Image)  *@
+               
+                <div class="card-body">
+                            
+                            @Html.DisplayNameFor(model => model.Title)         : @Html.DisplayFor(modelItem => item.Title)<br />
+                            @Html.DisplayNameFor(model => model.Director)      : @Html.DisplayFor(modelItem => item.Director)<br />
+                            @Html.DisplayNameFor(model => model.ReleaseYear)   : @Html.DisplayFor(modelItem => item.ReleaseYear)<br />
+                            @Html.DisplayNameFor(model => model.Price)         : @Html.DisplayFor(modelItem => item.Price)<br />
+                            @Html.DisplayNameFor(model => model.Genre)         : @Html.DisplayFor(modelItem => item.Genre)<br />
+                            @Html.DisplayNameFor(model => model.Actors)        : @Html.DisplayFor(modelItem => item.Actors)<br />
+     
+                        </div>
+
+                    <a href="#" class="btn btn-primary" >Buy</a>
+               
+                </div>
+             </div>
+        
+
+    }
+    </div>
+    </div>
+ 
