--- a/Views/Movies/Create.cshtml
+++ b/Views/Movies/Create.cshtml
@@ -3,13 +3,13 @@
 @{
     ViewData["Title"] = "Create";
 }
-<div class="bg-warning">
-    <h1>Create</h1>
-    <h4>Movie</h4>
+<div class="text-white">
+    <h1>Create Movie</h1>
+  
 </div>
 
-<hr />
-<div class="row">
+
+<div class="row text-white">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -56,8 +56,9 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div  >
+    <br />
+    <a asp-action="Index" class="text-white">Movie List</a>
 </div>
 
 @section Scripts {
