--- a/Views/Shared/_MoviePartial.cshtml
+++ b/Views/Shared/_MoviePartial.cshtml
@@ -27,8 +27,8 @@
      
                         </div>
 
-                    <a href="#" class="btn btn-primary" >Buy</a>
-               
+                    <a href="#" class="btn btn-primary text-white">Add to Cart</a>
+                    
                 </div>
              </div>
         
