--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -24,8 +24,8 @@ body {
 body {
     font-family: 'Century Gothic''Montserrat';
     font-style: Italic;
-    background-image: url("https://vsthemes.org/uploads/posts/2021-04/1617429519_skrinshot-03-04-2021-10_56_46.webp");
-  
+    background-image: url("https://i.pinimg.com/originals/dd/5a/6b/dd5a6bebdb5854f9d988abd62ec8e121.jpg");
+    opacity: 0.9;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
