--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -22,7 +22,7 @@ body {
 }
 
 body {
-    font-family: 'Century Gothic''Montserrat';
+    font-family: 'Century Gothic''Montserrat''fa-times';
     font-style: Italic;
     background-image: url("https://i.pinimg.com/originals/dd/5a/6b/dd5a6bebdb5854f9d988abd62ec8e121.jpg");
     opacity: 0.9;
