--- a/Views/Order/ShoppingCart.cshtml
+++ b/Views/Order/ShoppingCart.cshtml
@@ -84,6 +84,7 @@
                 @Html.DisplayFor(model => model.Total)
             </dd>
         </dl>
+        <a asp-action="PlaceOrder" asp-route-id="@Model.Id">Order</a>
     </div>
 
     <br />
