--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,16 +1,101 @@
 ﻿@model VanillaMovieShop.Models.ViewModels.FrontVM
-<h3 class="text-white"> Our Top Newest Movies</h3>
-<partial name="_MoviePartial" model="@Model.NewestMovies" />
 
 
-<h3 class="text-white"> Our Top Oldest Movies</h3>
-    <partial name="_MoviePartial" model="@Model.OldestMovies" />
 
 
-<h3 class="text-white"> Our Cheapest Movies</h3>
-    <partial name="_MoviePartial" model="@Model.CheapestMovies" />
+
+<body>
 
 
-<h3 class="text-white"> Our most Popular Movies</h3>
-    <partial name="_MoviePartial" model="@Model.PopularMovies" />
+    <main>
 
+        <div class="container bg-white ">
+            <!--Content-->
+            <div class="col-12 me-0 pe-0 text-center">
+                <div class=" row">
+                    <div class=" p-3 <!--border--> bg-light">
+                        <h1 class="display-1">Vanilla Movie Shop</h1>
+                        <p class="lead">
+                            Welcome to Vanilla Movie Shop. This assignment is meant as an introduction to the use of Twitter Bootstrap – a framework for CSS that is used by many web developers today.
+                            You will make the page entirely from scratch, using Bootstrap classes combined with your own CSS rules to style your page. A suggested layout is available on the last page of this file.
+                        </p>
+                        <div class="row ">
+                            <div class="col-6 p ">
+                            </div>
+                            <div class="col-6 p ">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Carousel -->
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+            <!-- Indicators/dots -->
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            </div>
+
+            <!-- The slideshow/carousel -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="~/images/2024_movies__and_series.jpg" alt="2024" class="d-block" style="width:100%">
+                    <div class="carousel-caption">
+                        <h1 class="text-bg-warning">Top 5 Newest Movie</h1>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Oldest5Movies">Top 5 Newest Movie</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/2023_movie_posters__7th.jpg" alt="2023" class="d-block" style="width:100%">
+                    <div class="carousel-caption">
+                        <h1 class="text-bg-warning">Top 5 Oldest Movie</h1>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Oldest5Movies">Top 5 Oldest Movie</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/2022_posters__2nd.jpg" alt="New York" class="d-block" style="width:100%">
+                    <div class="carousel-caption">
+                        <h1 class="text-bg-warning">Top 5 Cheapest Movie</h1>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Oldest5Movies">Top 5 Cheapest Movie</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Left and right controls/icons -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+
+
+        <!-- images -->
+        <div class="d-grid gap-3 container btn-outline-primary bg-white">
+
+            <br /><h1 class="text-center"> Our Top Newest Movies</h1><br />
+            <partial name="_MoviePartial" model="@Model.NewestMovies" /><br />
+
+
+            <h1 class="text-center"> Our Top Oldest Movies</h1><br />
+            <partial name="_MoviePartial" model="@Model.OldestMovies" /><br />
+
+
+            <h1 class="text-center"> Our Cheapest Movies</h1><br />
+            <partial name="_MoviePartial" model="@Model.CheapestMovies" /><br />
+
+            <h1 class="text-center"> Our most Popular Movies</h1><br />
+            <partial name="_MoviePartial" model="@Model.PopularMovies" />
+        </div>
+
+    </main>
+
+
+
+</body>
