--- a/Views/Order/ShoppingCart.cshtml
+++ b/Views/Order/ShoppingCart.cshtml
@@ -94,8 +94,8 @@
         <td>
             <div class="card">
                 <div class="card-body end-50">
-                    <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-warning btn-block btn-lg">Proceed to Pay</button>
-                   <a asp-action="PlaceOrder" asp-route-id="@Model.Id">Order</a>
+                    <a asp-action="PlaceOrder" asp-route-id="@Model.Id" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-warning btn-block btn-lg">Proceed to Pay</a>
+                   
                 </div>
             </div>
         </td>
