--- a/Views/Order/OrderConfirm.cshtml
+++ b/Views/Order/OrderConfirm.cshtml
@@ -1,5 +1,5 @@
 ﻿<div>
 	
-	<h1 class="text-center, text-black">Thanks for your order</h1>
+	<h1 class="text-center text-black">Thanks for your order</h1>
 
 </div>
